# rules_runfiles_codegen

./: .gitignore  BUILD.bazel  DESIGN.md  DEV_GUIDE.md  LANGUAGE_SUPPORT.md  MODULE.bazel  README.md  RUNFILES_CONCEPTS.md  VERSIONING.md  codegen.bzl
.agents/: AGENTS.md
.bcr/: README.md  config.yml
.bcr/core/: metadata.template.json  presubmit.yml
.bcr/go/: metadata.template.json  presubmit.yml  source.template.json
.bcr/kotlin/: metadata.template.json  presubmit.yml
.bcr/modules/rules_runfile_codegen_core/: metadata.json
.github/workflows/: ci.yml  release.yml  semantic-pr.yml
core/: BUILD.bazel  MODULE.bazel  source.template.json
core/internal/: BUILD.bazel  analyzer.bzl  rules.bzl
core/internal/emitters/: BUILD.bazel  go.bzl  kotlin.bzl  template.bzl  template_test.bzl  utils.bzl  utils_test.bzl
examples/go/: BUILD.bazel  MODULE.bazel  WORKSPACE  bazel-bin  bazel-go  bazel-out  bazel-testlogs  helper.go  main.go  run_test.sh
examples/go/data/: BUILD.bazel  dummy.txt  info.txt
examples/kotlin/: .bazelrc  BUILD.bazel  Helper.kt  MODULE.bazel  Main.kt  run_test.sh
examples/kotlin/data/: info.txt
go/: BUILD.bazel  MODULE.bazel  defs.bzl  source.template.json
go/docs/: BUILD.bazel  defs.md
go/runfile/: BUILD.bazel  runfile.go  runfile_test.go
kotlin/: .bazelrc  BUILD.bazel  MODULE.bazel  defs.bzl  source.template.json
kotlin/docs/: defs.md
kotlin/patches/: BUILD.bazel  rules_kotlin_2.3.20_stardoc.patch
kotlin/runfile/: BUILD.bazel  Runfile.kt  RunfileTest.kt
kotlin/runfiles/: BUILD.bazel  Runfile.kt  RunfileTest.kt
tests/go/: .bazelrc  BUILD.bazel  MODULE.bazel  helper_bin.go  integration_test.go  rules.bzl
tests/go/data/: helper_data.txt
tests/go/mock_repo/: BUILD.bazel  MODULE.bazel
tests/go/mock_repo/data/: file1.txt  file2.txt
tests/go/subdir/: BUILD.bazel
tests/go/subdir/sub_data/: file1.txt  file2.txt
tests/kotlin/: .bazelrc  BUILD.bazel  HelperBin.kt  IntegrationTest.kt  MODULE.bazel  rules.bzl  run_test.sh
tests/kotlin/data/collection/: file1.txt  file2.txt
tools/: devtool  go.mod  go.sum  update_readme.go
tools/cmd/devtool/: bcr_validation_test.go  helpers.go  languages.go  main.go  readme.go  test.go  update_docs.go  version.go
tools/cmd/runfilesdevtool/: helpers.go  main.go  readme.go  version.go
tools/internal/validation/: bcr.go
tools/internal/version/: version.go  version_test.go
