module(
    name = "rules_runfile_codegen_kotlin",
    version = "0.0.0",
)

bazel_dep(name = "rules_kotlin", version = "2.4.0")
bazel_dep(name = "rules_runfile_codegen_core", version = "0.0.0")
bazel_dep(name = "stardoc", version = "0.8.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_features", version = "1.42.1")
bazel_dep(name = "rules_java", version = "9.3.0")

local_path_override(
    module_name = "rules_runfile_codegen_core",
    path = "../core",
)
