package(default_visibility = ["//visibility:public"])

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(glob(["**/*.bzl"]))

bzl_library(
    name = "internal_bzl",
    srcs = glob(["**/*.bzl"], exclude = ["**/*_test.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//internal/emitters:emitters_bzl",
    ],
)
