# # [START quickstart]
load("@rules_go//go:def.bzl", "go_binary")
load("@rules_runfile_codegen_go//:defs.bzl", "go_runfile", "go_runfile_library")

package(default_visibility = ["//visibility:private"])

# A helper binary to demonstrate executable runfiles
go_binary(
    name = "helper",
    srcs = ["helper.go"],
)

# Generate the runfile accessor library
go_runfile_library(
    name = "resources",
    importpath = "github.com/example/project/examples/go/resources",
    entries = [
        go_runfile(
            name = "DataFile",
            target = "data/dummy.txt",
            doc = "A dummy data file.",
        ),
        go_runfile(
            name = "HelperTool",
            target = ":helper",
            doc = "A helper tool executable.",
        ),
        go_runfile(
            name = "ExampleSet",
            targets = ["data/dummy.txt", "data/info.txt"],
            base = "common_dir",
            doc = "A set of example data files.",
        ),
    ],
)

# Use the library in a binary
go_binary(
    name = "main",
    srcs = ["main.go"],
    deps = [
        ":resources",
    ],
)
# # [END quickstart]

# Test to ensure the example runs and works
load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "example_test",
    srcs = ["run_test.sh"],
    data = [":main"],
)
