module(
    name = "rules_runfile_codegen_example_go",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "protobuf", version = "33.4")

# Local overrides to use the current repo's modules
bazel_dep(name = "rules_runfile_codegen_core", version = "0.0.0")
local_path_override(
    module_name = "rules_runfile_codegen_core",
    path = "../../core",
)

bazel_dep(name = "rules_runfile_codegen_go", version = "0.0.0")
local_path_override(
    module_name = "rules_runfile_codegen_go",
    path = "../../go",
)
