module(
    name = "rules_runfile_codegen_example_kotlin",
    version = "0.0.0",
)

bazel_dep(name = "rules_kotlin", version = "2.4.0")
bazel_dep(name = "rules_shell", version = "0.3.0")

# Local overrides
bazel_dep(name = "rules_runfile_codegen_core", version = "0.0.0")
local_path_override(
    module_name = "rules_runfile_codegen_core",
    path = "../../core",
)

bazel_dep(name = "rules_runfile_codegen_kotlin", version = "0.0.0")
local_path_override(
    module_name = "rules_runfile_codegen_kotlin",
    path = "../../kotlin",
)
