load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runfile",
    srcs = ["runfile.go"],
    importpath = "github.com/meta-programming/rules_runfiles_codegen/go/runfile",
    visibility = ["//visibility:public"],
    deps = [
        "@rules_go//go/runfiles",
    ],
)

go_test(
    name = "runfile_test",
    srcs = ["runfile_test.go"],
    deps = [
        ":runfile",
    ],
)
