load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "runfile",
    srcs = ["Runfile.kt"],
    deps = [
        "@bazel_tools//tools/java/runfiles",
    ],
)

kt_jvm_test(
    name = "runfile_test",
    srcs = ["RunfileTest.kt"],
    test_class = "com.github.metaprogramming.runfile.RunfileTest",
    data = [
        "Runfile.kt",
    ],
    deps = [
        ":runfile",
        "@maven//:junit_junit",
    ],
)
