module(
    name = "rules_runfile_codegen_go_tests",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_runfile_codegen_go", version = "0.0.0")
bazel_dep(name = "rules_runfile_codegen_core", version = "0.0.0")
bazel_dep(name = "protobuf", version = "33.4")

local_path_override(
    module_name = "rules_runfile_codegen_go",
    path = "../../go",
)

local_path_override(
    module_name = "rules_runfile_codegen_core",
    path = "../../core",
)

bazel_dep(name = "mock_repo", version = "0.0.0")
local_path_override(
    module_name = "mock_repo",
    path = "mock_repo",
)
