load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_test")
load("@rules_runfile_codegen_kotlin//:defs.bzl", "kt_runfile", "kt_jvm_runfile_library")
load("//:rules.bzl", "dir_producer")

package(default_visibility = ["//visibility:private"])

# Dummy executable
kt_jvm_binary(
    name = "helper_bin",
    srcs = ["HelperBin.kt"],
    data = ["data/helper_data.txt"],
    main_class = "com.example.project.tests.HelperBinKt",
    deps = [
        "@bazel_tools//tools/java/runfiles",
    ],
)

filegroup(
    name = "collection_data",
    srcs = [
        "data/collection/file1.txt",
        "data/collection/file2.txt",
    ],
)

filegroup(
    name = "strict_file_data",
    srcs = ["data/dummy.txt"],
)

dir_producer(
    name = "strict_dir_data",
)

filegroup(
    name = "forced_col_data",
    srcs = ["data/dummy.txt"],
)

dir_producer(
    name = "dir_data",
)

kt_jvm_runfile_library(
    name = "test-resources",
    entries = [
        kt_runfile(
            name = "configJson",
            doc = "A dummy data file.",
            target = "data/dummy.txt",
        ),
        kt_runfile(
            name = "helperTool",
            doc = "A helper tool executable.",
            target = ":helper_bin",
        ),
        kt_runfile(
            name = "explicitExecutable",
            doc = "An executable with explicit type assertion.",
            target = ":helper_bin",
            type = "executable",
        ),
        kt_runfile(
            name = "externalFile",
            doc = "An external file from bazel_skylib.",
            target = "@bazel_skylib//:LICENSE",
        ),
        kt_runfile(
            name = "groupData",
            doc = "A fileset of files with explicit relative base.",
            target = ":collection_data",
            base = "./data/collection",
        ),
        kt_runfile(
            name = "groupDataDefault",
            doc = "A fileset of files with default base.",
            target = ":collection_data",
        ),
        kt_runfile(
            name = "dirData",
            doc = "A directory of files.",
            target = ":dir_data",
        ),
        kt_runfile(
            name = "strictFile",
            doc = "A file with explicit type assertion.",
            target = ":strict_file_data",
            type = "file",
        ),
        kt_runfile(
            name = "strictDir",
            doc = "A directory with explicit type assertion.",
            target = ":strict_dir_data",
            type = "directory",
        ),
        kt_runfile(
            name = "strictFileSet",
            doc = "A fileset with explicit type assertion.",
            target = ":collection_data",
            base = "./data/collection",
            type = "fileset",
        ),
        kt_runfile(
            name = "forcedFileSet",
            doc = "A single file forced to be a fileset.",
            target = ":forced_col_data",
            type = "fileset",
        ),
        kt_runfile(
            name = "commonDirFileSet",
            doc = "A fileset using common_dir base.",
            target = ":collection_data",
            base = "common_dir",
        ),
        # Duplicate targets mapping
        kt_runfile(
            name = "duplicateTarget1",
            doc = "First mapping of collection_data.",
            target = ":collection_data",
            base = "./data/collection",
        ),
        kt_runfile(
            name = "duplicateTarget2",
            doc = "Second mapping of collection_data keeping full path.",
            target = ":collection_data",
            base = "",
        ),
        # Mixed targets fileset
        # Note: Since Kotlin tests don't have a separate subdir package with targets,
        # we can just test multiple targets in the same package (e.g. collection_data + forced_col_data)
        kt_runfile(
            name = "mixedFileSet",
            doc = "A fileset merging collection_data and forced_col_data.",
            targets = [
                ":collection_data",
                ":forced_col_data",
            ],
            base = "common_dir",
        ),
        kt_runfile(
            name = "mockRepoGroup",
            doc = "A fileset from external repo with repo-relative base.",
            targets = ["@mock_repo//:files"],
            base = "@mock_repo//data",
        ),
    ],
    package = "com.example.project.tests.resources",
)

kt_jvm_library(
    name = "integration_test_lib",
    srcs = ["IntegrationTest.kt"],
    deps = [
        ":test-resources",
        "@bazel_tools//tools/java/runfiles",
    ],
)

java_test(
    name = "integration_test",
    main_class = "com.example.project.tests.IntegrationTestKt",
    use_testrunner = False,
    runtime_deps = [
        ":integration_test_lib",
    ],
)
