module(
    name = "rules_runfile_codegen_kotlin_tests",
    version = "0.0.0",
)

bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_runfile_codegen_kotlin", version = "0.0.0")
bazel_dep(name = "rules_runfile_codegen_core", version = "0.0.0")

local_path_override(
    module_name = "rules_runfile_codegen_kotlin",
    path = "../../kotlin",
)

local_path_override(
    module_name = "rules_runfile_codegen_core",
    path = "../../core",
)
bazel_dep(name = "mock_repo", version = "0.0.0")
local_path_override(
    module_name = "mock_repo",
    path = "../go/mock_repo",
)
